WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
309452
[cleanup] InlineDisplayContentBuilder::processRubyContent should not expand the display box list
https://bugs.webkit.org/show_bug.cgi?id=309452
Summary
[cleanup] InlineDisplayContentBuilder::processRubyContent should not expand t...
alan
Reported
2026-03-08 10:35:05 PDT
ssia
Attachments
Patch
(23.60 KB, patch)
2026-03-08 10:38 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(23.80 KB, patch)
2026-03-08 18:23 PDT
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(23.80 KB, patch)
2026-03-10 08:16 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2026-03-08 10:38:04 PDT
Created
attachment 478593
[details]
Patch
alan
Comment 2
2026-03-08 18:23:57 PDT
Created
attachment 478598
[details]
Patch
alan
Comment 3
2026-03-10 08:16:49 PDT
Created
attachment 478615
[details]
[fast-cq]Patch
EWS
Comment 4
2026-03-10 10:03:42 PDT
Committed
308990@main
(30149e8b4dff): <
https://commits.webkit.org/308990@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 478615
[details]
.
Radar WebKit Bug Importer
Comment 5
2026-03-10 10:04:13 PDT
<
rdar://problem/172195796
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug